# fintech-realtime-lakehouse

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dbt_lakehouse/: dbt_project.yml  profiles.yml  requirements.txt
dbt_lakehouse/macros/: lakehouse_time.sql
dbt_lakehouse/models/gold/: gold_fraud_alerts.sql  gold_hourly_liquidity.sql  schema.yml
dbt_lakehouse/tests/: assert_gold_fraud_alerts_rule_match.sql  assert_gold_hourly_liquidity_non_negative.sql
docker/: docker-compose.yml
docker/dbt/: Dockerfile
docker/flink/: Dockerfile
docker/iceberg-rest/: Dockerfile
docker/trino/catalog/: iceberg.properties
simulator/: main_generator.py
simulator/schemas/: transaction.avsc
storage/: iceberg_init.py  iceberg_maintenance.py  wait_for_silver.py
streaming/jobs/: config.py  kafka_to_iceberg.py
tests/: test_docker_compose_config.py  test_iceberg_init.py  test_iceberg_maintenance.py  test_kafka_to_iceberg_config.py  test_transaction_contract.py
